--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
-    <head></head>
-    <body><h1>Projeto do Márcio Rafael</h1></body>
+    <head>
+<link rel="stylesheet" href="estilo.css"
+
+    </head>
+    <body>
+        
+        <h1>Projeto do Márcio Rafael</h1>
+        <p>
+            um curso que explora os benefícios de utilizar o Git como ferramenta de controle de Versão
+
+        </p>
+    
+    </body>
 
 </html>
